--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <img src="../assets/Afaq_page-0001-removebg-preview.png"/>
-        <h1> Beginners 101</h1>
-        <p>قمنا بتطوير هذه الدورة لتنمية مهارات  كل المشتركين في لغة البرمجة"بايثون" و الوصول بهم الي مرحلة الاحتراف في هذه اللغه</p>
+        <img src="Afaq_page-0001-removebg-preview.png"/>
+        <h1> Networks Basics </h1>
+        <p>قمنا بتطوير هذه الدورة لتنمية مهارات  كل المشتركين في شبكات الحاسب و الوصول بهم الي مرحلة الاحتراف في هذه اللغه</p>
     </header>
 
     <main>
@@ -38,6 +38,7 @@
         <p>&copy; 2025 Afaq-tech. جميع الحقوق محفوظة.</p>
     </footer>
 
-    <script src="../scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
